--- a/README.textile
+++ b/README.textile
@@ -2,11 +2,9 @@ h1. Main
 
 Like the name suggests jsMyAdmin  is similar to "phpyAdmin".
 It's primary prupose is to access, maintain and manage databases and their respective contents.
-Unlike phpMyAdmin, jsMyAdmin is heavily based on javaScript (hence the name jsMyAdmin), in particular the jQuery framwork, to provide a very modern and comfortable 
-interface for the user.
+Unlike phpMyAdmin, jsMyAdmin is heavily based on javaScript (hence the name jsMyAdmin), in particular the jQuery framwork, to provide a very modern and comfortable interface for the user.
 
-It is not meant to replace phpMyAdmin, but more of,  to be a very stylish and modern alternative to it - with, hopefully in the future quite some handy functions 
-you won't find in PMA. 
+It is not meant to replace phpMyAdmin, but more of,  to be a very stylish and modern alternative to it - with, hopefully in the future quite some handy functions you won't find in PMA. 
 
 h1. Features
 
@@ -25,5 +23,5 @@ First UI draft is completed.
 
 h1. Thanks to 
 * "Logsol for WebService Framework used in here":https://github.com/logsol/WebService-Framework
-* Logsol for database class used in his MVC Framework":https://github.com/logsol/Katharsis-Framework
+* "Logsol for database class used in his MVC Framework":https://github.com/logsol/Katharsis-Framework
 * "jQuery":https://github.com/jquery/jquery
